# whiteboarder

./: ButtonWidget.py  Console.py  ConsoleWidget.py  GUI.py  GUI2.py  Interface.py  LinkedListRep.py  README.md  StructureCanvas.py  TopLevel.py  camera.py  camera2.py  detectCircle.py  digits.py  digits_video.py  edgedetection.py  edgedetection_matt.py  edgedetection_scott.py  numProcessor  numProcessor.py  protoDetectCircle.py  test.test  type_defs.py
circle_detect/: CMakeLists.txt  camera.cpp  cdetect.cpp  cdetect2.cpp
line_detect/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  ldetect  ldetect.cpp
threshold_detect/: CMakeCache.txt  CMakeLists.txt  Makefile  Readme.md  cmake_install.cmake  detect  detect.cpp
